# ecommerce_system

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: serializers.py  tests.py  views.py
ecommerce_system/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  filters.py  models.py  serializer.py  tests.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_options_alter_discount_options_and_more.py  0003_category_activate_date_category_deactivate_date_and_more.py  0004_alter_category_options_alter_discount_options_and_more.py  0005_category_updated_at_product_updated_at.py
utils/: models_abstract.py  pagination.py
