[tool.poetry]
name = "ecommerce-system"
version = "0.1.0"
description = ""
authors = ["funkycadet <ericsmithsonian2@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-jsonapi = "^7.1.0"
inflection = "^0.5.1"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
psycopg2 = "^2.9.10"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
